--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     </tr>
   </table>
   <h3>Refrence Img of My Work</h3>
-  <img src="/today.png">
+  <img src="/today.png" alt="My work">
     <hr>
     <h2>HTML Tags Reference (PDF)</h2>
     <embed src="/html_tags_list.pdf" type="application/pdf"  width="100%" height="100%">
